--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -211,8 +211,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li><a href="#">menu1</a></li>
-                <li><a href="#">menu2</a></li>
+                <li><a href="{% url 'wisc_cc_home' %}">Home</a></li>
+                <li><a href="{% url 'wisc_cc_graph' %}">Graph</a></li>
                 <li><a href="#">menu3</a></li>
             </ul>
         </div>
