--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -1,4 +1,4 @@
-{% extends 'kanopy/base_kanopy.html' %}
+{% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
 {% block title %}Welcome to Wisconsin Citizen Science Cover Crop Project {% endblock %}
 
