--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -12,7 +12,7 @@
         <div class="card-deck">
 
           <div class="card">
-            <a href="#">
+            <a href="{% url 'wisc_cc_survey' %}">
               <img class="card-img-top" width="200" height="200" src="{% static 'img/cover_crop_good_image.jpg' %}"
                 alt="Card image cap">
               <div class="card-body">
