--- a/wisccc/templates/wisccc/base_survey.html
+++ b/wisccc/templates/wisccc/base_survey.html
@@ -34,9 +34,8 @@
 
       </div>
       <div class="card-footer text-muted text-center" style="font-size: small;">
-        This website is a collaboration between <a href="https://mosh.umn.edu">MOSH</a> and the <a
-          href="https://wilsonlab.cfans.umn.edu/">Wilson Lab</a>, which developed the Green CovR
-        algorithm and Evans Geospatial.
+        This project is a collaboration between the Center for Integrated Agricultural Systems and the Michael Fields
+        Institute.
       </div>
 
     </div>
