--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -3,18 +3,27 @@
 {% load static %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+<link rel="stylesheet" href="{% static 'css/wisccc.css' %}">
 {% endblock %}
 
 {% block body %}
 <div class="container">
   <h1 class="text-center logo my-4">
-    <img class="left logoimg" src="{% static 'img/mosh_logo.png' %}" />
-    <img class="right logoimg" src="{% static 'img/vertMrnM.gif' %}" />
+    <img class="logoimg" src="{% static 'img/logo_wisc_cc_affiliations.png' %}" />
+    <!-- <img class="left logoimg" src="{% static 'img/mosh_logo.png' %}" />
+    <img class="right logoimg" src="{% static 'img/vertMrnM.gif' %}" /> -->
   </h1>
-  <h1 class="text-center logo my-4">
-    <a href="{% url 'wisc_cc_home' %}">Wisconsin Citizen Science<br>Cover Crop Project</a>
-  </h1>
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+      <div class="card">
+        <div class="card-body">
+          <h1 class="card-title logo text-center">
+            <a href="{% url 'wisc_cc_home' %}">Wisconsin Citizen Science<br>Cover Crop Project</a>
+          </h1>
+        </div>
+      </div>
+    </div>
+  </div>
   {% block content %}
   {% endblock %}
 </div>
