--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -207,13 +207,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Wisconsin Citizen Science Cover Crop Project</a>
+            <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen Science Cover Crop Project</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'wisc_cc_home' %}">Home</a></li>
                 <li><a href="{% url 'wisc_cc_graph' %}">Graph</a></li>
-                <li><a href="#">menu3</a></li>
+                <li><a href="{% url 'wisc_cc_survey' %}">Survey</a></li>
             </ul>
         </div>
     </nav>
