corrected email link

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -16,7 +16,7 @@
 
         <p>Thank you for filling out this survey. Please proceed ONLY if you have registered with us. (To register, send
           an email with your name, mailing address, phone number, and county to Mrill Ingram <a
-            href="mailto:catesa@umn.edu">mingram@wisc.edu</a>)</p>
+            href="mailto:mingram@wisc.edu">mingram@wisc.edu</a>)</p>
 
         <p> We will be in touch very soon about collecting an optional biomass sample and to share information about the
           data you are sharing. We look forward to working with you!</p>
