--- a/wisccc/templates/wisccc/includes/form_farmer.html
+++ b/wisccc/templates/wisccc/includes/form_farmer.html
@@ -10,12 +10,12 @@
 </div>
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
-        {{ form.nick_name|as_crispy_field }}
+        {{ form.farm_name|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-8 mb-0">
-        {{ form.farm_name|as_crispy_field }}
+    <div class="form-group col-md-4 mb-0">
+        {{ form.county|as_crispy_field }}
     </div>
 </div>
 {{ form.errors}}
