--- a/wisccc/templates/wisccc/survey_section_2.html
+++ b/wisccc/templates/wisccc/survey_section_2.html
@@ -12,7 +12,7 @@
   {{ form.media }}
 </head>
 
-
+<h3 class="card-title">"Research Field" Cover Crop Information</h3>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
 
