--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -234,7 +234,7 @@
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'wisc_cc_home' %}">Home</a></li>
-                <li><a href="{% url 'wisc_cc_graph' %}">Graph</a></li>
+                <li><a href="{% url 'wisc_cc_map' %}">Map</a></li>
                 <li><a href="{% url 'wisc_cc_survey' %}">Survey</a></li>
             </ul>
         </div>
