--- a/wisccc/templates/wisccc/includes/form_1.html
+++ b/wisccc/templates/wisccc/includes/form_1.html
@@ -1,10 +1,6 @@
 {% load crispy_forms_tags %}
 
-<div class="form-row">
-    <div class="form-group col-md-4 mb-0">
-        {{ form.county|as_crispy_field }}
-    </div>
-</div>
+
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form.years_experience|as_crispy_field }}
@@ -34,7 +30,9 @@
         {{ form.dominant_soil_series_4|as_crispy_field }}
     </div>
 </div>
-
+<div>
+    <h5>Sources of Support</h5>
+</div>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form.info_source_nutrient_mgmt_1|as_crispy_field }}
