--- a/wisccc/templates/wisccc/includes/form_1.html
+++ b/wisccc/templates/wisccc/includes/form_1.html
@@ -15,14 +15,14 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.dominant_soil_series_1|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-4 mb-0">
-        {{ form.dominant_soil_series_2|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.dominant_soil_series_2|as_crispy_field }}
+    </div>
     <div class="form-group col-md-4 mb-0">
         {{ form.dominant_soil_series_3|as_crispy_field }}
     </div>
@@ -34,13 +34,15 @@
     <h5>Sources of Support</h5>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_nutrient_mgmt_1|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_nutrient_mgmt_2|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_nutrient_mgmt_3|as_crispy_field }}
     </div>
 </div>
@@ -56,13 +58,15 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_cover_crops_1|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+</div>
+<div class="form-row">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_cover_crops_2|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.info_source_cover_crops_3|as_crispy_field }}
     </div>
 </div>
@@ -77,15 +81,15 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-8 mb-0">
         {{ form.support_cover_crops_1|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+    <!-- <div class="form-group col-md-4 mb-0">
         {{ form.support_cover_crops_2|as_crispy_field }}
     </div>
     <div class="form-group col-md-4 mb-0">
         {{ form.support_cover_crops_3|as_crispy_field }}
-    </div>
+    </div> -->
 </div>
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
@@ -98,21 +102,21 @@
     </div>
 </div>
 
-<div class="form-row">
+<!-- <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.like_to_expand_cover_crops|as_crispy_field }}
     </div>
-</div>
+</div> -->
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.barriers_to_expansion|as_crispy_field }}
     </div>
 </div>
-<div class="form-row">
+<!-- <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.top_risks_of_cover_cropping_mgmt|as_crispy_field }}
     </div>
-</div>
+</div> -->
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.quit_planting_cover_crops|as_crispy_field }}
@@ -127,7 +131,7 @@
     </div>
 </div>
 
-<div class="form-row">
+<!-- <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form.why_cover_crops_1|as_crispy_field }}
     </div>
@@ -142,10 +146,10 @@
     <div class="form-group col-md-4 mb-0">
         {{ form.why_cover_crops_4|as_crispy_field }}
     </div>
-</div>
+</div> -->
 
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-8 mb-0">
         {{ form.why_cover_crops_write_in|as_crispy_field }}
     </div>
 </div>
