--- a/wisccc/templates/wisccc/includes/form_1.html
+++ b/wisccc/templates/wisccc/includes/form_1.html
@@ -7,10 +7,10 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.total_acres|as_crispy_field }}
     </div>
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.percent_of_farm_cc|as_crispy_field }}
     </div>
 </div>
@@ -123,10 +123,10 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-2 mb-0">
+    <!-- <div class="form-group col-md-2 mb-0">
         {{ form.use_crop_insurance|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-6 mb-0">
+    </div> -->
+    <div class="form-group col-md-8 mb-0">
         {{ form.if_use_crop_insurance|as_crispy_field }}
     </div>
 </div>
