--- a/wisccc/templates/wisccc/includes/form_2.html
+++ b/wisccc/templates/wisccc/includes/form_2.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.closest_zip_code|as_crispy_field }}
     </div>
     <div class="form-group col-md-4 mb-0">
@@ -50,53 +50,11 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-8 mb-0">
-        {{ form.crop_rotation|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_species_1|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_planting_rate_1|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_species_2|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_planting_rate_2|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_species_3|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_planting_rate_3|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_species_4|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_planting_rate_4|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_species_5|as_crispy_field }}
-    </div>
-    <div class="form-group col-md-5 mb-0">
-        {{ form.cover_crop_planting_rate_5|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
     <div class="form-group col-md-6 mb-0">
-        {{ form.cover_crop_species_and_rate_write_in|as_crispy_field }}
+        {{ form.cover_crop_multispecies_mix_write_in|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-6 mb-0">
+        {{ form.crop_rotation|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
@@ -107,10 +65,75 @@
         {{ form.cash_crop_planting_date|as_crispy_field }}
     </div>
 </div>
+<h6>Please select any of the following that were planted as a cover crop in this field *this year*.</h6>
+<div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_species_1|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_1|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_1_units|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_species_2|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_2|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_2_units|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_species_3|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_3|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_3_units|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_species_4|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_4|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_4_units|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_species_5|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_5|as_crispy_field }}
+    </div>
+    <div class="form-group col-md-4 mb-0">
+        {{ form.cover_crop_planting_rate_5_units|as_crispy_field }}
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group col-md-8 mb-0">
+        {{ form.cover_crop_species_and_rate_write_in|as_crispy_field }}
+    </div>
+</div>
+
 <div class="form-row">
     <div class="form-group col-md-5 mb-0">
         {{ form.years_with_cover_crops|as_crispy_field }}
     </div>
+</div>
+
+<div class="form-row">
     <div class="form-group col-md-5 mb-0">
         {{ form.dominant_soil_texture|as_crispy_field }}
     </div>
@@ -135,10 +158,10 @@
 </div>
 
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-5 mb-0">
         {{ form.manure_prior|as_crispy_field }}
     </div>
-    <div class="form-group col-md-3 mb-0">
+    <div class="form-group col-md-4 mb-0">
         {{ form.manure_prior_rate|as_crispy_field }}
     </div>
     <div class="form-group col-md-3 mb-0">
@@ -146,10 +169,10 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-5 mb-0">
         {{ form.manure_post|as_crispy_field }}
     </div>
-    <div class="form-group col-md-3 mb-0">
+    <div class="form-group col-md-4 mb-0">
         {{ form.manure_post_rate|as_crispy_field }}
     </div>
     <div class="form-group col-md-3 mb-0">
@@ -162,7 +185,7 @@
     <h4>Tillage</h4>
 </div> -->
 <div class="form-row">
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.tillage_system_cash_crop|as_crispy_field }}
     </div>
     <div class="form-group col-md-5 mb-0">
@@ -170,7 +193,7 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.primary_tillage_equipment_2|as_crispy_field }}
     </div>
     <div class="form-group col-md-5 mb-0">
@@ -178,7 +201,7 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.secondary_tillage_equipment|as_crispy_field }}
     </div>
     <div class="form-group col-md-5 mb-0">
@@ -187,7 +210,7 @@
 </div>
 
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-7 mb-0">
         {{ form.soil_conditions_at_cover_crop_seeding|as_crispy_field }}
     </div>
     <div class="form-group col-md-4 mb-0">
@@ -204,7 +227,7 @@
     <div class="form-group col-md-5 mb-0">
         {{ form.cover_crop_seed_cost|as_crispy_field }}
     </div>
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-7 mb-0">
         {{ form.cover_crop_planting_cost|as_crispy_field }}
     </div>
 </div>
@@ -213,7 +236,7 @@
     <div class="form-group col-md-5 mb-0">
         {{ form.cover_crop_planting_date|as_crispy_field }}
     </div>
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-7 mb-0">
         {{ form.cover_crop_estimated_termination|as_crispy_field }}
     </div>
 </div>
