--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -47,20 +47,20 @@
             </a>
           </div>
         </div>
-        {% if perms.kanopy.can_view_submissions %}
+        <!-- {% if perms.wisccc.survery_manager %} -->
         <br>
         <div class="card">
 
           <div class="card-header">
-            Welcome, {{ user.username }}
+            Hello Administrator!
           </div>
           <div class="card-body">
-            <h5 class="card-title">View Uploads Table</h5>
-            <p class="card-text">To view, edit, and delete uploaded cover crop documentation, click below.</p>
-            <a href="{% url 'kanopy_table' %}" class="btn btn-primary">Go to table</a>
+            <h5 class="card-title">Download the data!</h5>
+            <p class="card-text">To download the data click below</p>
+            <a href="{% url 'wisccc_download_data' %}" class="btn btn-primary">Download</a>
           </div>
         </div>
-        {% endif %}
+        <!-- {% endif %} -->
       </div>
       <div class="card-footer text-muted text-center">
         Questions? See our <a href="{% url 'green_covr_references' %}">references page</a>
